network/vpc.tf
resource "aws_vpc" "APareja" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "APareja"
  }
}
